[package]
name = "reluax"
version = "0.2.0"
edition = "2021"
description = "A LuaX-based web framework"
authors = ["Duckonaut"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Duckonaut/reluax"
homepage = "https://github.com/Duckonaut/reluax"
keywords = ["http", "web", "framework", "lua", "luax"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
color-eyre = "0.6.2"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.2", features = ["http1", "http2", "server", "tokio"] }
rlua = { version = "0.19.7", default-features = false, features = ["system-luajit"] }
tempfile = "3.9.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
utf8-read = "0.4.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "skip"

[workspace.metadata.dist.dependencies.apt]
luajit = "*"
libluajit-5.1-dev = "*"

[workspace.metadata.dist.dependencies.homebrew]
luajit = "*"
